# mitkSegExample1

./: CMakeLists.txt  README.md  SegMainWindow.cpp  SegMainWindow.h  SegToolmain.cpp  files.cmake  otsuseg.cxx  otsuseg2d.cpp  otsuseg3d.cpp
